fix visibility

--- a/src/components/object-gui/object-gui.scss
+++ b/src/components/object-gui/object-gui.scss
@@ -1,4 +1,5 @@
 object-gui {
+	visibility: visible;
 	display: block;
 	font-size: 11px;
 	font-family: Consolas, monospace;
